--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "book-app",
   "version": "1.0.0",
-  "main": "./src/app.js",
+  "main": "./api/app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
